# gitsage

./: README.md  org.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_workflow.py  discovery_demo.py  notes_demo.py
release_notes/: release_notes_v0.8.2_20250108.md  release_notes_v1.0.14_20250105.md
src/gitsage/: __init__.py  workflow.py
src/gitsage/agents/: state.py
src/gitsage/models/: analysis.py  base.py  code.py  content.py  state.py
src/gitsage/nodes/: __init__.py  analysis.py  analysis_node.py  commit_discovery.py  commit_discovery_node.py  context.py  context_node.py  discovery.py  organization.py  planning.py  planning_node.py  release_generator.py  release_notes_renderer_node.py  renderer.py
src/gitsage/types/: __init__.py  analysis.py  code.py  render.py  state.py
src/gitsage/utils/: git.py
tests/: __init__.py  conftest.py  test_package.py
tests/nodes/: __init__.py  test_commit_discovery_node.py  test_context.py  test_context_node.py  test_discovery.py  test_planning.py  test_planning_node.py  test_release_generator.py
